2002-12-02  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* doc/Makefile.in: Remove GNU make things.

2002-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Don't format Japanes info if the
	mule feature is not provided.

	* aclocal.m4 (AC_PATH_LISPDIR, AC_PATH_ICONDIR): Undo last change.

	* doc/Makefile.in (INSTALL_INFO): New variable.
	(install): Use it.

2002-11-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (srcdir): New variable.
	(FLAGS): Specify an absolute path to w3mhack.el.
	(all-en): New rule.
	(all-ja): Made it make only Japanese info.
	(info-en): New rule.
	(install-en): New rule.
	(install-ja): Made it install only Japanese info.
	(install-lisp): Use `$(srcdir)/' instead of `./'.
	(install-icons): Ditto.
	(install-info-en): New rule.
	(Makefile): Use `$(srcdir)/' instead of `./'.
	(config.status): Ditto.
	(very-slow): Specify an absolute path to attic/addpath.el.

	* doc/.cvsignore: Add version.texi.

	* doc/ChangeLog: Removed.

	* doc/Makefile.in (srcdir, subdir, top_srcdir): New variables.
	(FLAGS): Specify an absolute path to w3mhack.el.
	(EMACSINFO): Use `$(top_srcdir)' instead of `..'.
	(INFO_DEPS): Include both emacs-w3m.info and emacs-w3m-ja.info.
	(INFO_DEPS_EN): New variable.
	(en): New rule.
	(version.texi): New rule.
	(emacs-w3m.info): Made it depend on version.texi.
	(emacs-w3m-ja.info): Ditto.
	(install): Use `$(top_srcdir)/' instead of `../'.
	(install-en): New rule.

	* doc/version.texi: Removed from the CVS repository.

2002-11-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* doc/Makefile.in (clean): Fix target.

2002-11-29  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3mhack.el (w3mhack-nonunix-install): Create parent directories.

2002-11-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* doc/texinfo.tex: Replaced with the latest version.

2002-11-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-header-line-map): Prevent tool-bar from being
	doubled under Emacs 21.
