@@ -1,3 +1,9 @@
+2002-12-02  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3mhack.el (w3mhack-makeinfo): Temporally fix to help users who
+	don't have APEL that use texinfmt if loading doc/ptexinfmt.el is
+	failed.
+
 2002-12-02  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
 
 	* doc/Makefile.in: Remove GNU make things.
